# hwork

./: Dockerfile  docker-compose.yaml  pyproject.toml  requirements.txt
Files/mysite/myauth/: views.py
Testing/mysite/myauth/: views.py
mysite/: Dockerfile
mysite/blogapp/: models.py  views.py
mysite/blogapp/migrations/: 0001_initial.py
mysite/blogapp/templates/blogapp/: list_articles.html
mysite/locale/en/LC_MESSAGES/: django.po
mysite/locale/ru/LC_MESSAGES/: django.po
mysite/myauth/: forms.py  mixins.py  models.py  urls.py  views.py
mysite/myauth/migrations/: 0001_initial.py  0002_profile_avatar.py
mysite/myauth/templates/auth/: about-user.html  list-users.html  login.html  register-view.html  update-user-info.html
mysite/mysite/: settings.py  urls.py
mysite/shopapp/: actions.py  admin.py  forms.py  midlleware.py  mixins.py  models.py  serializers.py  sitemaps.py  tests.py  urls.py  views.py
mysite/shopapp/fixtures/: orders.json  products.json  users.json
mysite/shopapp/management/commands/: create_orders.py  create_products.py
mysite/shopapp/migrations/: 0001_initial.py  0002_order.py  0003_remove_order_price_order_date_create.py  0004_order_user.py  0005_order_products.py  0006_alter_order_address_alter_order_promocode.py  0007_order_is_archived.py  0008_alter_order_user.py  0009_product_crated_by.py  0010_alter_order_options_alter_product_options.py
mysite/shopapp/templates/admin/: csv_form.html
mysite/shopapp/templates/shopapp/: archive-order.html  archive-product.html  change_list.html  (+12 more)
permissions/mysite/myauth/: views.py
